// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker snapshots empty state, date mode, peer available 1`] = `
<View
  accessibilityLabel="Date of birth"
  testID="date-picker"
>
  <Text
    color="#111827"
    testID="date-picker-label"
  >
    Date of birth
  </Text>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="date-picker-trigger"
  >
    <View
      backgroundColor="#FFFFFF"
      borderColor="#D1D5DB"
      borderRadius={12}
    >
      <Text
        color="#9CA3AF"
        numberOfLines={1}
        testID="date-picker-trigger-text"
      >
        Select date…
      </Text>
      <Text
        color="#6B7280"
      >
        ▼
      </Text>
    </View>
  </View>
</View>
`;

exports[`DatePicker snapshots error state 1`] = `
<View
  accessibilityLabel="Date of birth"
  testID="date-picker"
>
  <Text
    color="#111827"
    testID="date-picker-label"
  >
    Date of birth
  </Text>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="date-picker-trigger"
  >
    <View
      backgroundColor="#FFFFFF"
      borderColor="#DC2626"
      borderRadius={12}
    >
      <Text
        color="#9CA3AF"
        numberOfLines={1}
        testID="date-picker-trigger-text"
      >
        Select date…
      </Text>
      <Text
        color="#6B7280"
      >
        ▼
      </Text>
    </View>
  </View>
  <Text
    color="#DC2626"
    testID="date-picker-error-text"
  >
    Required
  </Text>
</View>
`;

exports[`DatePicker snapshots missing peer dep fallback 1`] = `
<View
  accessibilityLabel="Date of birth"
  testID="date-picker"
>
  <Text
    color="#111827"
    testID="date-picker-label"
  >
    Date of birth
  </Text>
  <Text
    color="#DC2626"
    testID="date-picker-missing-peer"
  >
    Install \`@expo/ui\` to enable DatePicker.
  </Text>
</View>
`;

exports[`DatePicker snapshots value set + helper 1`] = `
<View
  accessibilityLabel="Date of birth"
  testID="date-picker"
>
  <Text
    color="#111827"
    testID="date-picker-label"
  >
    Date of birth
  </Text>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="date-picker-trigger"
  >
    <View
      backgroundColor="#FFFFFF"
      borderColor="#D1D5DB"
      borderRadius={12}
    >
      <Text
        color="#111827"
        numberOfLines={1}
        testID="date-picker-trigger-text"
      >
        Jun 12, 2027
      </Text>
      <Text
        color="#6B7280"
      >
        ▼
      </Text>
    </View>
  </View>
  <Text
    color="#6B7280"
    testID="date-picker-helper-text"
  >
    MM/DD/YYYY
  </Text>
</View>
`;
